# SCANTEC

./: .gitignore  404.html  CITATION.cff  LICENSE.md  Makefile  Makefile.am  Makefile.in  README  README.md  SCANPLOT.yml  aclocal.m4  arquivo_teste.txt  autogen.sh  aux_functions.py  configure  configure.ac  data_structures.py  environment.yml  global_variables.py  index.html  install  mkdocs.yml  plot_functions.py  plot_scamtec_results.gpl  run_scantec.sh  test_cmd-get_dataframe.py  test_cmd-get_dataset.py  test_cmd-plot_dTaylor.py  test_cmd-plot_functions.sh  test_cmd-plot_lines.py  test_cmd-plot_lines_tStudent.py  test_cmd-plot_scorecard.py
.github/workflows/: ci.yml
INTERFACE_SCAMTEC/: build.xml
Interface_Scamtec/: scamtec.conf  scamtec.x
Interface_Scamtec_v01/: scamtec.conf  scamtec.x
Interface_Scamtec_v01.1/: .classpath
Interface_Scamtec_v01/nbproject/: project.properties
SCAMTEC/: Makefile  README  install  run_scamtec.sh  run_scantec.sh  scamtec.conf
SCAMTEC/core/: Makefile  Makefile-deps  Makefile-objs  SCAM_MetForm.f90  SCAM_ModelPlugin.f90  SCAM_UtilsMOD.f90  SCAM_bstatistic.f90  SCAM_coreMOD.f90  SCAM_dataMOD.f90  SCAM_dataMOD.f901  bilinear_interpolation.f90  bramsIO.f90  eof.f90  eta_read.f90  ftn_drv.h  grib2tab.default.tab  lergrib.f90  m_Ensemble_T126.f90  m_TQ062L028.f90  m_agcm.f90  m_clima50yr.f90  m_gfs.f90  m_metri_precip.f90  m_mode.f90  m_mode_objects.f90  m_mode_pairAttrib.f90  m_mode_singleAttrib.f90  m_string.f90  obs_Precipitation.f90  plot_scamtec_results.gpl  scamdrv.f90  scamtec.conf  submete_scantec.qsub  template_read.f90
SCAMTEC/run/: README_RUN
SCAMTEC/statistics/: m_basic.f90
SCAMTEC_v0.1/: scamtec.conf
SCAMTEC_v0.1.2/core/: Ftable_obs.c  SCAM_Plugin_obs.c  SCAM_dataMOD.f90  lge120130102.12iwv  m_get_inpack90.f90  m_time.f90  scamtec.conf
SCAMTEC_v0.1/climatologiaJGM/: .climatologia50yr.ctl.swo  climatologia50yr.ctl  read.f90
SCAMTEC_v0.1/core/: Ftable.c  Makefile  Makefile-deps  Makefile-objs  SCAM_MetForm.f90  SCAM_ModelPlugin.f90  SCAM_UtilsMOD.f90  SCAM_bstatistic.f90  SCAM_coreMOD.f90  SCAM_ctableMOD.f90  SCAM_dataMOD.f90  SCAM_metricas.f90  bilinear_interpolation.f90  bramsIO.f90  eof.f90  eta_read__genmod.f90  fort.3  m_T126_Seq.f90  m_agcm.f90  m_clima50yr.f90  m_string.f90  obs_Precipitation.f90  scamdrv.f90  scamtec.conf  scamtec_module.f90  submete_scamtec.qsub
SCANPLOT/: 03_plotagem_dos_graficos.ipynb  SCANPLOT-multiple.ipynb  SCANPLOT.ipynb  SCANPLOT_App.ipynb  SCANPLOT_App_wanderson.ipynb  paraTresLevel.py  read_scantec_namelists.py  roc3.py  roc4_versao_rapida_corrigida.py  scanplot.py  scanplot_diario.py  scanplot_diario_jn.py  scanplot_mensal_jn.py  scanplot_scorecard.py  setup.py
SCANPLOT/doc/: main.fls  main.out
SCANPLOT/json/: read_scantec_namelists.py  scantec.conf  scantec.vars.json
SCANPLOT/tmp/: main.py  paraTresLevel.py  scanplot_mensal.py
SCANTEC/core/: m_EraInterim.f90  m_WRF9km.f90  m_agcm.f90  m_brams5km.f90  m_mode.f90  scamtec.conf
SCANTEC/tables/: grib2tab.default.tab-dia00
branches/SCANPLOT_T11212/: aux_functions.py  core_scanplot.py  data_structures.py  plot_functions.py  scanplot.py  test_cmd-get_dataframe.py  test_cmd-plot_dTaylor.py  test_cmd-plot_functions.sh  test_cmd-plot_lines.py  test_cmd-plot_lines_tStudent.py  test_cmd-plot_scorecard.py
branches/SCANPLOT_V1.0.0/: MANIFEST.in  README.md  SCANPLOT.yml  (+8 more)
conf/: SCAM_arch.mk
config/: flags.cray  flags.gfortran  flags.ifort  flags.template
core/: Makefile  Makefile-deps  Makefile-objs  MathExpress.f90  SCAM_ObsPlugin.f90  SCAM_UtilsMOD.f90  SCAM_coreMOD.f90  SCAN_GlobalTypes.f90  SCAN_ModBundle.f90  SCAN_ObsFuncTable.c  bilinear_interpolation.f90  ftn_rd_grb2.c  m_GrADSfiles.F90  m_agcm.f90  m_clima50yr.f90  m_constants.f90  m_inpak90.F90  m_ioutil.F90  m_iwv.f90  m_string.f90  m_time.f90  scam_gridmod.mod  scamdrv.f90  scan_ConvFunc.f90  scan_MathPlugin.f90  scan_MetForm.f90  scan_ModelPlugin.f90  scan_UtilsMOD.f90  scan_bstatistic.f90  scan_coreMOD.f90  scan_dataMOD.f90  scan_outputMOD.f90  scan_readModel.f90  scandrv.f90  scantec.conf  scantec_module.f90  simpleScores.f90  submete_scantec.qsub  testeMathExpress.f90  varType.f90
core.orig/: Makefile  Makefile-deps  Makefile-objs  SCAN_Plugin.c  SCAN_coreMOD.f90  SCAN_dataMOD.f90  SCANdrv.f90  ftn_drv.h  m_brams.f90  plot_SCANtec_results.gpl
docs/: README  funcoes.readme  index.md  instalacao.md  introducao.md  namelist.md  resol_problemas.md  scanplot.md  uso.md
instalacao/: index.html
interp/: map_utils.f90
introducao/: index.html
io/: GPOSNMC20040101002004010106P.fct.TQ0062L028.ctl  read_grib.f90
m4/: .ax_lib_netcdf4.m4.swp  ax_fc_module_flag.m4  ax_mpif90_fc.m4  enable_feature.m4  enable_feature_wa.m4  ftn.sh  require_libf90.m4
make/: Makefile  Makefile.Deps  Makefile.Paths
models/: SCAM_ModTemplate.f90  SCAM_TQ062L028.f90  SCAM_clima50yr.f90
namelist/: index.html
plugins/: SCAM_ModelPlugin.f90  SCAM_StatPlugin.f90
resol_problemas/: index.html
scanplot/: LICENSE  README.md  SCANPLOT.yml  core_scanplot.py  environment.yml  index.html  scanplot.py
scripts_uteis/: nc2grb.sh
search/: search_index.json
src/: .Makefile.am.swo  .Makefile.am.swp  .scan_coreMOD.f90.swp  Makefile.am  Makefile.in  scanTime.f90  scan_bstatistic.f90  scan_coreMOD.f90  scan_dataMOD.f90  scan_timeControl.f90  scantec_module.f90
stats/: SCAM_bstatistic.f90
tables/: AGCM_TQ0062L028_50YR_CLIMATOLOGY_18levs.model  BAM_TQ0126L028_9levs.model  BAM_TQ0299L064_18levs.model  BAM_TQ0299L064_28levs.model  BAM_global_20km_SCAN_5levs.model  BRAMS_5km_19levs.model  BRAMS_ams_08km_SCAN_5levs.model  CFSR_T382L064_CLIMATOLOGY_37levs.model  ETA_ams_05km_22levs.model  Eta_ams_08km_SCAN_5levs.model  MONAN_global_SCAN.model  MPAS.model  WRF_cpt_07KM_SCAN_5levs.model  scantec.vars
taylorDiagram/: plota_taylor_diag.py  taylorDiagram_mod.py
uso/: index.html
utils/: Makefile-objs  README  README.md  SCAM_TimeMod.f90  gribtab.221.tab  m_ReadGrib.f90  run_scantec-periodo.sh  run_scantec-series.sh  run_scantec.sh  scantec.conf.template  teste.x
v0.1.2/: LICENSE  README
(+3506 files in other folders)
