# Macro file for use with GNU AutoTools for generating config files and Makefiles.
# This file was manually created based on information found via Google and the
# GNU documentation. Although it works for the source code it's included with,
# it may not be 100% correct so additional research/tweaking may be needed.
#
# AUTOMAKE_OPTIONS is used to pass options to 'automake'. In this case
# we're telling it to use the GNU tool chain.
AUTOMAKE_OPTIONS = gnu

# SUBDIRS takes a space delimited list of _all_ the subdirectories that
# contain source code.
SUBDIRS = src

